fix: dropdown menus hidden behind non-scrollable content
Fix an edge case where the dropdown menus for modifying partitions get
hidden under certain conditions[1]. This fixes a blocker for Fedora 43[2].

[1]: https://bugzilla.redhat.com/show_bug.cgi?id=2388785
[2]: https://pagure.io/fedora-qa/blocker-review/issue/1873

Resolves: INSTALLER-4272

--- a/pkg/storaged/storage-anaconda.scss
+++ b/pkg/storaged/storage-anaconda.scss
@@ -19,3 +19,9 @@
     --pf-v6-c-card--BorderColor: transparent;
   }
 }
+
+body:has(.storage-anaconda) {
+  // containers like pf-v6-c-page won't expand with the viewport when dropdown menus are created 
+  // on lower resolutions, so we force all background to match the default
+  background: var(--pf-t--global--background--color--primary--default);
+}
